fix(Stencila theme): Left align figure pre
Preformatted text
(e.g. generated by Pyrhon, R etc) should be displayed left aligned, as it would say on the console.

--- a/src/themes/stencila/styles.css
+++ b/src/themes/stencila/styles.css
@@ -153,10 +153,18 @@ figure {
   border-radius: 4px;
 }
 
+figure img,
+figure pre {
+  padding: 1rem;
+}
+
 figure img {
   display: block;
   margin: 0 auto;
-  padding: 1rem;
+}
+
+figure pre {
+  text-align: left;
 }
 
 figcaption {
